--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wp_inkognito",
   "version": "1.0.0",
   "description": "Hi. I'm a starter theme called _s, or underscores, if you like. I'm a theme meant for hacking so don't use me as a Parent Theme. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.",
-  "author": "Based Automattic Theme Team",
+  "author": "Based on Automattic Theme Team",
   "license": "GPL-2.0-or-later",
   "keywords": [
     "WordPress",
